[feat]: form component validation, architecture update

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,25 @@
 section {
   overflow-x: hidden;
 }
+
+.active-field {
+  @apply !border-baked;
+}
+
+.field-error-color {
+  @apply !border-flory placeholder:text-flory;
+}
+.field-error-text {
+  @apply px-3 text-flory italic text-xs;
+}
+
+input:-webkit-autofill {
+  -webkit-text-fill-color: white !important;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #014e56 inset !important;
+}
